--- a/app/globals.css
+++ b/app/globals.css
@@ -106,3 +106,40 @@ body {
 .learn-more:hover .button-text {
   color: #fff;
 }
+
+/* Delete Button Animation */
+.delete-button {
+  width: 48px;
+  height: 48px;
+  border-radius: 50%;
+  background-color: rgb(20, 20, 20);
+  border: none;
+  font-weight: 600;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.164);
+  cursor: pointer;
+  transition-duration: .3s;
+  overflow: hidden;
+  position: relative;
+}
+
+.delete-icon {
+  width: 16px;
+  height: 16px;
+  transition-duration: .3s;
+}
+
+.delete-icon path {
+  fill: white;
+}
+
+.delete-button:hover {
+  background-color: rgb(255, 69, 69);
+  transform: scale(1.05);
+}
+
+.delete-button:hover .delete-icon {
+  transform: scale(1.1);
+}
